--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,41 @@
---extra-index-url https://download.pytorch.org/whl/cu118
-conformer==0.3.2
-deepspeed==0.14.2; sys_platform == 'linux'
-diffusers==0.27.2
-gdown==5.1.0
-gradio==3.43.2
-grpcio==1.57.0
-grpcio-tools==1.57.0
+antlr4-python3-runtime==4.11.0
+conformer
+diffusers
+deepspeed
+gdown
+gradio
+grpcio
+grpcio-tools
 hydra-core==1.3.2
-HyperPyYAML==1.2.2
-inflect==7.3.1
-librosa==0.10.2
-lightning==2.2.4
-matplotlib==3.7.5
-modelscope==1.15.0
-networkx==3.1
+hyperpyyaml
+inflect
+librosa
+lightning
+matplotlib
+modelscope
+networkx
 omegaconf==2.3.0
-onnx==1.17.0
-onnxruntime-gpu==1.17.0; sys_platform == 'linux'
-onnxruntime==1.17.0; sys_platform == 'darwin' or sys_platform == 'windows'
-openai-whisper==20231117
-protobuf==4.25
-pydantic==2.7.0
-rich==13.7.1
-soundfile==0.12.1
-tensorboard==2.14.0
-torch==2.2.0
-torchaudio==2.2.0
-uvicorn==0.30.0
-wget==3.2
-fastapi==0.111.0
-fastapi-cli==0.0.4
-WeTextProcessing==1.0.3
-transformers
+onnx
+onnxruntime-gpu
+onnxruntime
+protobuf
+pydantic
+rich
+soundfile
+tensorboard
+torch
+torchaudio
+uvicorn
+fastapi
+fastapi-cli
+WeTextProcessing
+transformers==4.46.3
 accelerate
-huggingface-hub==0.25.2
+huggingface-hub
+pystoi
 tqdm
+pystoi
+einops
+scipy
+accelerate
+peft==0.13.2
