--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-antlr4-python3-runtime==4.9.3
 conformer
 diffusers
 deepspeed
@@ -40,3 +39,6 @@ scipy
 accelerate
 peft==0.13.2
 flash-attn==2.7.4.post1
+wget
+pyarrow
+antlr4-python3-runtime
